# motor

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
assets/demo/: demo.tape  demo_runner.py
docs/: CONFIGURATION.md  SECURITY.md
examples/: README.md  clean.py  playground.py  skill_test.py  verdict_minimal.py
examples/attachments/: README.md  main.py
examples/chat/: README.md  main.py
examples/concurrency/: README.md  main.py
examples/console/: README.md  main.py
examples/custom-guard/: README.md  main.py
examples/docker/: Dockerfile  README.md  docker-compose.yml  main.py
examples/events/: README.md  main.py
examples/file-creation/: README.md  main.py
examples/interrupt/: README.md  main.py
examples/python-tools/: README.md  main.py  subagent.py
examples/quickstart/: README.md  main.py
examples/skills/: README.md  main.py
examples/skills/skills_local/apply-discount/: SKILL.md
examples/skills/skills_local/apply-discount/scripts/: discount.py
examples/skills/skills_local/python-math/: SKILL.md
examples/skills/skills_local/say-hello/: SKILL.md
examples/skills_example/say_hello/: SKILL.md
examples/streaming/: README.md  main.py
examples/structured-output/: README.md  main.py
examples/subagents/: README.md
examples/subagents/declarative/: README.md  main.py
examples/subagents/declarative/files/: calc.py
examples/subagents/explicit/: README.md  main.py
examples/subagents/general-purpose/: README.md  main.py
examples/system-prompt/: README.md  main.py
examples/vllm/: README.md  main.py
examples/web-search/: README.md  main.py
skill/: README.md
skills/sophia-motor/: README.md  package.json
src/sophia_motor/: __init__.py  _adapters.py  _chat.py  _chunks.py  _console.py  _models.py  _partial_json.py  _python_tools.py  cleanup.py  config.py  events.py  guard.py  motor.py  proxy.py
tests/: run_smoke.py  test_adapters.py  test_attachments.py  test_budget_thinking_effort.py  test_chat.py  test_cli_extra_args.py  test_config_defaults.py  test_env_overrides.py  test_guard.py  test_interrupt.py  test_motor_basic.py  test_output_files.py  test_output_schema.py  test_proxy_lifecycle.py  test_proxy_network_errors.py  test_proxy_transforms.py  test_python_tools.py  test_skills.py  test_streaming.py  test_subagents.py  test_workspace_layout.py
