[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-motor"
version = "0.0.1"
description = "Programmable, instanceable agent motor — wraps Claude Agent SDK with proxy gateway, audit log, and event bus. Built for Sophia/RGCI compliance reasoning."
authors = [{name = "Aleksandr Ivanovitch", email = "alex@mwspace.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["claude", "agent-sdk", "compliance", "anthropic", "motor"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "claude-agent-sdk>=0.1.58",
    "anthropic>=0.97.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/mwspace/sophia-motor"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
