[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sophia-motor"
version = "0.1.0"
description = "Smart functions for Python. Inputs in, Pydantic out, multi-turn agent in the middle."
authors = [{name = "Sophia AI", email = "tech@2sophia.ai"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
keywords = ["claude", "agent", "agent-sdk", "anthropic", "pydantic", "structured-output", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    # SDK pinned to the exact version we tested with. Bump deliberately, after
    # re-running the live smoke test. v0.1.x is pre-1.0 → patch versions can
    # carry breaking changes.
    "claude-agent-sdk==0.1.71",
    # Proxy + HTTP forwarding. Pinned to current installed versions for
    # reproducible builds. The SDK does NOT depend on the `anthropic` python
    # client — we forward via httpx directly.
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "httpx==0.28.1",
    "pydantic==2.13.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/2sophia/motor"
Repository = "https://github.com/2sophia/motor"
Issues = "https://github.com/2sophia/motor/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Resolve `import sophia_motor` from the src/ layout without requiring an
# editable install. Editable install (`pip install -e ".[dev]"`) is still
# the recommended dev workflow — this just makes a one-shot `pytest` work
# in fresh checkouts and on CI runners that skip install.
pythonpath = ["src"]
